--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
 
 <!-- Open Graph image and Twitter Card metadata -->
 
+  
+    <meta property="og:image" content="/logo.jpg" />
+    <meta name="twitter:image" content="/logo.jpg"/>
+          <meta name="twitter:card" content="summary">
+        <meta property="og:image:width" content="1024">
+        <meta property="og:image:height" content="1024">
+      <meta property="og:image:type" content="image/jpeg">
+  
 <title itemprop="name">Xzerad</title>
 <meta property="og:title" content=Xzerad />
 <meta name="twitter:title" content=Xzerad />
